[GStreamer] Avoid sending SELECT_STREAM events when nothing changed

https://bugs.webkit.org/show_bug.cgi?id=186678